--- a/index.html
+++ b/index.html
@@ -303,22 +303,22 @@
                     © 2018 UI43 - Free Templates
                 </div>
                 <div class="footer__social">
-                    <a href="#" target="_blank">
+                    <a href="https://www.behance.net/" target="_blank">
                         <img src="images/be-hance-footer.svg" width="24">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://dribbble.com/" target="_blank">
                         <img src="images/dribble-footer.svg" width="18">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/" target="_blank">
                         <img src="images/linked-footer.svg" width="18">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://www.facebook.com/" target="_blank">
                         <img src="images/facebook-footer.svg" width="18">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <img src="images/instagram-footer.svg" width="18">
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://twitter.com/" target="_blank">
                         <img src="images/twitter-footer.svg" width="20">
                     </a>
                 </div>
